 Add workaround for PR#48451. Some BCM5717-5720 based systems get NMI on boot. This problem doesn't occur when we don't use prefetchable memory in the APE area. I don't know the reason...  The way to not to use prefetchable memory was adviced by Riastradh. Tested with HP MicroServer Gen8.